SERVER-27576 Fix quit() in shell and all the tests that depend on it

(cherry picked from commit f3d5da919580d6ab7a332fab604b056451994af3)